kustomize/examples/google/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rutherford
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - YOUR_HOSTNAME
      secretName: rutherford-tls
  rules:
    - host: YOUR_HOSTNAME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rutherford
                port:
                  number: 80
